[gd_scene load_steps=8 format=2]

[ext_resource path="res://artefact/ExecutionController.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="Theme" id=2]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 1 )
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="InputEventAction" id=3]
action = "dbg_start_pause"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "dbg_step"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[node name="ExecutionController" type="HBoxContainer"]
margin_top = 376.0
margin_right = 252.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 32 )
theme = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
max_speed = false

[node name="RunPause" type="Button" parent="."]
margin_right = 36.0
margin_bottom = 32.0
focus_mode = 0
toggle_mode = true
shortcut = SubResource( 4 )
text = "Run"

[node name="Step" type="Button" parent="."]
margin_left = 40.0
margin_right = 80.0
margin_bottom = 32.0
focus_mode = 0
action_mode = 0
shortcut = SubResource( 6 )
text = "Step"
[connection signal="toggled" from="RunPause" to="." method="_on_RunPause_toggled"]
[connection signal="pressed" from="Step" to="." method="_on_Step_pressed"]
